changed countries page stat layout

--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -1,7 +1,7 @@
 <div class="text-center user_profile">
 
  <!-- SECTION -->
-  <div class="country-image" style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url('<%= @country.photo.url %>'); height: 80vh; width: 100vw; background-repeat: no-repeat; margin: 0vh auto; background-size: 100% auto; background-position: center; display: flex; flex-direction: column; justify-content: space-around">
+  <div class="country-image" style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url('<%= @country.photo.url %>'); height: 80vh; width: 100vw; background-repeat: no-repeat; margin: 0vh auto; background-size: 100% auto; background-position: center; display: flex; flex-direction: row; justify-content: space-between">
     <!--     <%= link_to "#{@country.photographer_first_name} #{@country.photographer_last_name} / Unsplash", @country.unsplash_url_utm %> -->
     <div class="country-info">
       <div><h1><%= @country.name %></h1></div>
@@ -18,44 +18,44 @@
     </div>
     <div class="country-stats">
         <div>
-          <p><i class="fa fa-globe" aria-hidden="true"></i> Continent</p>
+          <h3><i class="fa fa-globe" aria-hidden="true"></i> Continent</h3>
           <p><%= @country.continent %></p>
         </div>
 
         <div>
-          <p><i class="fa fa-map-signs" aria-hidden="true"></i> Capital</p>
+          <h3><i class="fa fa-map-signs" aria-hidden="true"></i> Capital</h3>
           <p><%= @country.capital %></p>
         </div>
 
         <div>
-          <p><i class="fa fa-money" aria-hidden="true"></i> Currency</p>
+          <h3><i class="fa fa-money" aria-hidden="true"></i> Currency</h3>
           <p><%= @country.currency_name %></p>
         </div>
 
         <% unless @country.languages.nil? %>
           <div>
-            <p><i class="fa fa-language" aria-hidden="true"></i> Languages</p>
+            <h3><i class="fa fa-language" aria-hidden="true"></i> Languages</h3>
             <p><%= @country.languages_prettified %></p>
           </div>
         <% end %>
 
         <% unless @country.population.nil? %>
           <div>
-            <p><i class="fa fa-user" aria-hidden="true"></i> Pop.</p>
+            <h3><i class="fa fa-user" aria-hidden="true"></i> Pop.</h3>
             <p><%= @country.population %></p>
           </div>
         <% end %>
 
         <% unless @country.national_dish.nil? %>
           <div>
-            <p><i class="fa fa-cutlery" aria-hidden="true"></i> National Dish</p>
+            <h3><i class="fa fa-cutlery" aria-hidden="true"></i> National Dish</h3>
             <p><%= @country.national_dish %></p>
           </div>
         <% end %>
 
         <% unless @country.avg_temperature_in_celsius.nil? %>
           <div>
-            <p><i class="fa fa-thermometer-half" aria-hidden="true"></i> Avg. Temp.</p>
+            <h3><i class="fa fa-thermometer-half" aria-hidden="true"></i> Avg. Temp.</h3>
             <p><%= @country.avg_temperature_in_celsius %> C </p>
           </div>
         <% end %>
@@ -63,12 +63,12 @@
         <% unless @country.landlocked.nil? %>
           <% if @country.landlocked == true %>
             <div>
-              <p><i class="fa fa-ship" aria-hidden="true"></i>Landlocked?</p>
+              <h3><i class="fa fa-ship" aria-hidden="true"></i>Landlocked?</h3>
               <p>Yes</p>
             </div>
           <% else %>
             <div>
-              <p><i class="fa fa-ship" aria-hidden="true"></i>Landlocked?</p>
+              <h3><i class="fa fa-ship" aria-hidden="true"></i>Landlocked?</h3>
               <p>No</p>
             </div>
           <% end %>
@@ -79,8 +79,8 @@
 
 
 <!-- SECTION -->
-  <div class="dashboard-container">
-  <!--   <% if @country.average_rating > 0 %>
+<!--   <div class="dashboard-container">
+ -->  <!--   <% if @country.average_rating > 0 %>
       <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1503221043305-f7498f8b7888?auto=format&fit=crop&w=1035&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item-country">
         <div class="country-box-text">
           <h3>Average Rating</h3>
@@ -89,7 +89,7 @@
       </div>
     <% end %> -->
 
-    <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1487581424120-18f3611a63e6?auto=format&fit=crop&w=1026&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item-country">
+    <!-- <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1487581424120-18f3611a63e6?auto=format&fit=crop&w=1026&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item-country">
       <div class="country-box-text">
         <h3>Continent</h3>
         <p><%= @country.continent %></p>
@@ -159,7 +159,7 @@
       </div>
     <% end %>
   </div>
-
+ -->
 <!-- SECTION -->
   <div>
     <% if @destination.empty? %>
@@ -173,11 +173,11 @@
             <%= f.input :notes, label: false %>
             <%= f.input :status, as: :hidden %>
             <%= f.submit class: "btn btn-warning", value: "Update Note" %>
+            <div style="height: 3vh;"></div>
           <% end %>
         </div>
     <% end %>
 
-  <div style="height: 3vh;"></div>
   <% unless current_user.destinations.where(country_id: @country.id).empty? %>
     <h2>Reviews for <%= @country.name %></h2>
     <% if @country.reviews.empty? %>
