--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -62,6 +62,10 @@
 //   opacity: 0.1;
 // }
 
+.card a:hover {
+  text-decoration: none;
+  color: lighten($pink, 5%);
+}
 .card .icons a {
   margin: 0 0.25vw;
   &:hover {
