--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,7 @@
 @import "pages/index";
 
 .main-content {
-  min-height: 100%;
+  min-height: 100vh;
   overflow-y: scroll;
   display: block;
   #content {
