--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
  -->          <%= f.input :first_name, required: true, autofocus: true %>
           <%= f.input :last_name, required: true, autofocus: true %>
           <%= f.input :email, required: true, autofocus: true %>
-          <%= f.input :airport_code, required: true, label: "Home City", collection: ["New York", "Miami", "Newark", "San Francisco", "Houston", "Washington, DC", "Los Angeles", "Atlanta", "Dallas", "Toronto", "Vancouver", "Montreal", "Amsterdam", "Paris", "Frankfurt", "Moscow", "London", "Rome", "Vienna", "Helsinki", "Copenhagen", "Zurich", "Sydney", "Tokyo", "Cairo", "New Dheli", "Dubai", "Shanghai", "Hong Kong", "Beijing", "Seoul", "Jeddah", "Sao Paulo", "Bogota", "Rio De Janeiro", "Santiago", "Lima", "Caracas", "Buenos Aires", "Quito", "Medellin", "Panama City"] %>
+          <%= f.input :airport_code, required: true, label: "Home City", collection: ["New York", "Miami", "Newark", "San Francisco", "Houston", "Washington, DC", "Los Angeles", "Atlanta", "Dallas", "Toronto", "Vancouver", "Montreal", "Amsterdam", "Paris", "Frankfurt", "Moscow", "London", "Rome", "Vienna", "Helsinki", "Copenhagen", "Zurich", "Sydney", "Tokyo", "Cairo", "New Dheli", "Dubai", "Shanghai", "Hong Kong", "Beijing", "Seoul", "Jeddah", "Sao Paulo", "Bogota", "Rio De Janeiro", "Santiago", "Lima", "Caracas", "Buenos Aires", "Quito", "Medellin", "Panama City"].sort %>
         <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
           <%= f.input :password_confirmation, required: true %>
           <%= f.button :submit, "Sign up" %>
