--- a/app/assets/stylesheets/components/_countries.scss
+++ b/app/assets/stylesheets/components/_countries.scss
@@ -1,16 +1,18 @@
 .country-stats {
-  width: 18vw;
+  width: 25vw;
   background-color: rgba(0,0,0,0.6);
-  height: 80vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   align-items: center;
   align-items: center;
   border-left: 1px solid #ed4b72;
   box-shadow: black -3px -1px 2px;
   padding-top: 2vh;
   padding-bottom: 2vh;
+  div {
+    max-width: 23vw;
+  }
   p {
     color: white;
   }
