changed font size

--- a/app/assets/stylesheets/components/_countries.scss
+++ b/app/assets/stylesheets/components/_countries.scss
@@ -15,12 +15,13 @@
   }
   p {
     color: white;
+    font-size: 0.9em;
   }
   h3 {
     font-size: 1em;
     text-transform: uppercase;
     color: $pink;
-    margin-top: 2vh;
+    margin-top: 0.5vh;
   }
 }
 
